salesforce/force-app/main/default/objects/AFM_Runbook__mdt/AFM_Runbook__mdt.object-meta.xml
<CustomObject>
    <label>AFM Runbook</label>
    <pluralLabel>AFM Runbooks</pluralLabel>
</CustomObject>