salesforce/force-app/main/default/objects/AFM_Runbook__mdt/fields/Case_Types__c.field-meta.xml
<CustomField>
    <fullName>Case_Types__c</fullName>
    <label>Case Types</label>
    <type>Text</type>
    <length>255</length>
    <description>Comma-separated AFM rule ids (snake_case) this runbook applies to. Apex splits on comma and exact-matches a Case's AFM_Case_Type__c.</description>
</CustomField>