salesforce/force-app/main/default/objects/AFM_Runbook__mdt/fields/Salesforce_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Template_Id__c</fullName>
    <label>Salesforce Template Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Optional EmailTemplate Id used by the customer-notification draft (Group C). Empty for all v1 runbooks — no email templates are seeded yet.</description>
</CustomField>