salesforce/force-app/main/default/objects/AFM_Runbook__mdt/fields/Severity_Floor__c.field-meta.xml
<CustomField>
    <fullName>Severity_Floor__c</fullName>
    <label>Severity Floor</label>
    <type>Text</type>
    <length>20</length>
    <description>Minimum severity (low|medium|high|critical) from the runbook frontmatter. Triage uses this as the floor when composing the severity justification.</description>
</CustomField>