salesforce/force-app/main/default/objects/AFM_Runbook__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Text</type>
    <length>80</length>
    <description>Human-readable runbook title. Mirrors the runbook frontmatter `title` and the seeded ContentVersion Title — the join key Apex uses to link the runbook File to a Case.</description>
</CustomField>