salesforce/force-app/main/default/objects/AFM_Runbook__mdt/fields/Triage_Steps__c.field-meta.xml
<CustomField>
    <fullName>Triage_Steps__c</fullName>
    <label>Triage Steps</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>One triage step per line, materialized from the runbook "Triage steps" section. Lines beginning with [Auto] are already performed automatically; Apex (Group B) creates an investigation Task only for the remaining manual steps. Empty for the two reference runbooks. CMDT getInstance()/getAll() return null for LongTextArea — query this field via SOQL.</description>
</CustomField>